--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.3.3",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "bootstrap": "^5.1.3",
     "express": "^4.17.3",
     "rxjs": "~7.5.0",
