--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "express": "^4.17.3",
+    "highcharts": "^10.1.0",
+    "highcharts-angular": "^3.0.0",
     "ngx-cookie-service": "^13.2.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
